--- a/scss/_google-homepage.scss
+++ b/scss/_google-homepage.scss
@@ -1,15 +1,12 @@
 /* Stage */
 
 #stage {
-    background: grey;
+    background: white;
     height: 300px;
     width: 600px;
+    opacity: .90;
 }
 
-#stage #star {
-    height: 100px;
-    width: 100px;
-}
 
 
 
